fix listing on small screens

--- a/app/assets/scss/pop-pop.scss
+++ b/app/assets/scss/pop-pop.scss
@@ -162,7 +162,22 @@ abbr {
 }*/
 .vocab-link-link {
   width: 55%;
+  padding-right: 15px;
 }
 .vocab-link-language {
+  padding-right: 15px;
   color: rgba(#333, .6);
+}
+
+@media (max-width: 620px) {
+  .vocab-links,
+  .vocab-index > div {
+    width: auto;
+  }
+  .vocab-link-link {
+    width: auto;
+  }
+  .vocab-link-language {
+    color: rgba(#333, .6);
+  }
 }
